#### Don't forget to change the version number in configure.ac! ####

15 Jul 2004 Fixed tape "at loadpoint" sense issue - Ivan Warren
08 Jul 2004 cfba fixes - Greg Smith
08 Jul 2004 ASN-and-LX-reuse facility: SSAR, SSAIR - Roger Bowler
07 Jul 2004 ASN-and-LX-reuse facility: PT, PTI - Roger Bowler
01 Jul 2004 Fix error introduced into BCTR - Juergen & Greg
01 Jul 2004 Minor performance update macro ILC - Bernard van der Helm
29 Jun 2004 exilc.pat - Remove execflag check from INST_UPDATE_PSW - Greg
29 Jun 2004 noilc.pat - Calculate ILC on demand - Greg Smith
27 Jun 2004 pr.pat - Performance tweak for PR - Greg Smith
27 Jun 2004 cckdwrs.pat - Prevent extra writer threads from starting - Greg
26 Jun 2004 if.pat - Minor tweaks to instfetch - Greg Smith
26 Jun 2004 gen.pat - Performance tweaks to L,LM,SLA,SLR,ST,STM - Greg Smith
26 Jun 2004 tlbx2.pat - Fix real mode bug in tlbx.pat - Greg Smith
26 Jun 2004 iawrap2.pat - Fix performance bug in iawrap.pat - Greg Smith
24 Jun 2004 cckdhang.pat - Fix hang on shutdown if using cckd - Greg Smith
19 Jun 2004 lfs.pat - Allow large files if sizeof(off_t) > 4 - Fish & Greg
17 Jun 2004 iawrap.pat - Performance improvement for instruction address
            wrapping - Greg Smith
17 Jun 2004 ex4.pat - Performance improvement for 4 byte inst - Greg Smith
17 Jun 2004 tlbx.pat - accelerated address lookup improvements - Greg Smith
17 Jun 2004 Tuntap duplicate MAC address fix/workaround - Fish
15 Jun 2004 ASN-and-LX-reuse facility: PC number translation - Roger Bowler
14 Jun 2004 ASN-and-LX-reuse facility changes for PR - Roger Bowler
11 Jun 2004 Minor ETF3 optimalizations - Bernard van der Helm
10 Jun 2004 Prevent multiple console threads from being created - Fish
10 Jun 2004 ETF3 fixes Roger Bowler/Bernard van der Helm
10 Jun 2004 ipaddr/mask filtering support for terminal devices - Fish
08 Jun 2004 Extended translation facility 3 completed - Bernard van der Helm