@@ -190,13 +190,20 @@ is to add an appropriate routing entry to your default gateway router.
 
 <h2>Defining the link in Hercules</h2>
 <p>
-You must define a single CTC device in the Hercules configuration
-file. The second device will automatically be created at the original
-address + 1. The device number must be even.
+You must define a CTC device pair in the Hercules configuration
+file. The second device must bear the same definition as the 1st 
+instance and be at device number + 1. The 1st device number must be even.
+Devices should preferably be grouped (furthermore, it makes the 
+configuration file easier to read).
 <p>
 <code>
-<br>0E20 3088 CTCI 192.168.200.1 192.168.200.2
+<br>0E20.2 3088 CTCI 192.168.200.1 192.168.200.2
+<br>or
+<br>0E20,0E21 3088 CTCI 192.168.200.1 192.168.200.2
+<br>or
+<br>0E20-0E21 3088 CTCI 192.168.200.1 192.168.200.2
 </code>
+<p>Check <A HREF="hercconf.html#device_definitions">Device Definition Statement syntax </A> for an explanation of device grouping.
 <p>
 Two IP addresses must be assigned, one for the driving system's
 end of the link, and one for the Hercules end of the link.  For
